chore: rename parameter to aexn-args
